lab5/out
g++ -std=gnu++17 -g -O0 -Wall -Wextra -Wpedantic -Wshadow -Wold-style-cast -fdiagnostics-color=never -c 3ac.cpp
3ac.cpp: In function ‘ac3* p_static_int(astree*, symbol_table*, std::string*, const string*)’:
3ac.cpp:346:47: warning: unused parameter ‘current’ [-Wunused-parameter]
  346 | ac3 *p_static_int(astree *expr, symbol_table *current, string *label,const string *init){
      |                                 ~~~~~~~~~~~~~~^~~~~~~
3ac.cpp:346:64: warning: unused parameter ‘label’ [-Wunused-parameter]
  346 | ac3 *p_static_int(astree *expr, symbol_table *current, string *label,const string *init){
      |                                                        ~~~~~~~~^~~~~
3ac.cpp: In function ‘ac3* p_stmt(astree*, symbol_table*, std::string*)’:
3ac.cpp:394:53: error: too many arguments to function ‘ac3* p_assignment(astree*, symbol_table*, std::string*)’
  394 |       return p_assignment(expr,current,label,nullptr);
      |                                                     ^
3ac.cpp:262:6: note: declared here
  262 | ac3 *p_assignment(astree *expr, symbol_table *current, string *label){
      |      ^~~~~~~~~~~~
3ac.cpp: In function ‘void ac_globalvar(astree*, all_tables*)’:
3ac.cpp:414:36: error: cannot convert ‘const char*’ to ‘std::string*’ {aka ‘std::__cxx11::basic_string<char>*’}
  414 |   p_assignment(child,table->global,"");
      |                                    ^~
      |                                    |
      |                                    const char*
3ac.cpp:262:64: note:   initializing argument 3 of ‘ac3* p_assignment(astree*, symbol_table*, std::string*)’
  262 | ac3 *p_assignment(astree *expr, symbol_table *current, string *label){
      |                                                        ~~~~~~~~^~~~~
make: *** [Makefile:55: 3ac.o] Error 1
